compiler/tests/should-pass/code-generation/SourceCommitmentDestLocal2.via
host alice : {A}
host bob   : {A}

fun main() {
let $aliceLocal@Local(host = alice) = input int from alice;
let $aliceCommit@Commitment(receivers = {bob}, sender = alice) = $aliceLocal;
let $aliceDeclassified@Local(host = alice) = $aliceCommit;
}
